force-app/main/default/objects/RV_Valve_Routing_Details__c/fields/Descr__c.field-meta.xml
<CustomField>
    <fullName>Descr__c</fullName>
    <label>Descr</label>
    <length>255</length>
    <type>Text</type>
</CustomField>