force-app/main/default/objects/RV_Valve_Routing_Details__c/fields/Standard_Operation_ID__c.field-meta.xml
<CustomField>
    <fullName>Standard_Operation_ID__c</fullName>
    <label>Standard Operation ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>